--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -12,6 +12,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         caption {
@@ -26,8 +27,18 @@
             padding: 10px;
         }
 
+        tbody tr:nth-child(even) {
+            background-color: lightgray;
+        }
+
         td.numero {
             text-align: right;
+        }
+
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: gray;
         }
 
         thead, tfoot {
