--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -4,14 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de iframe</title>
+    <style>
+        iframe {
+            width: 500px;
+            height: 500px;
+            border: 1px dashed black;
+        }
+    </style>
 </head>
 <body>
     <h1>Testando o uso de um iframe</h1>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed nam quis eligendi, quae 
-        <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe>
+        <iframe src="https://www.cursoemvideo.com" frameborder="0">
+            <a href="https://www.cursoemvideo.com">link</a>
+        </iframe>
         sapiente accusamus deleniti voluptate sint impedit provident, aut eum culpa minus veniam cum sequi error possimus voluptatem!
+    </p>
 
+    <p>
+        Olha o repositorio do Guanabara
+        <iframe src="https://gustavoguanabara.github.io" frameborder="0">
+            <a href="https://gustavoguanabara.github.io">Gustavo Guanabara</a>
+        </iframe>
     </p>
 </body>
 </html>
