--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -22,14 +22,14 @@
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam, provident. Praesentium obcaecati at voluptate! Praesentium, quis cum. Repellendus veniam minus ipsa perspiciatis, esse voluptates deleniti, inventore iste provident unde maiores.</p>
 
     <ul>
-        <li><a href="pagina001.html">Primeira página</a></li>
-        <li><a href="#">Segunda página</a></li>
+        <li><a href="pagextra/pagina001.html" target="frame">Primeira página</a></li>
+        <li><a href="pagextra/pagina002.html" target="frame">Segunda página</a></li>
         <li><a href="#">Terceira página</a></li>
     </ul>
 
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati commodi quae animi alias qui atque odio. Odio quia tempora neque, ducimus nesciunt minus cum quos est, a cumque doloribus illum Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi reiciendis illum ipsa sapiente pariatur totam quam! Qui pariatur minus explicabo voluptate itaque consequuntur ipsa est odit, quaerat, reiciendis iusto nostrum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet corporis sit minima praesentium saepe, dolores, pariatur in laboriosam alias id eos nisi aut iusto earum est, reiciendis vel ipsa possimus.</p>
 
-    <iframe src="" frameborder="1">
+    <iframe name="frame" srcdoc="<h1>Escolha uma das opções acima</h1> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum aliquid id soluta at velit atque consequatur possimus molestiae numquam itaque voluptatibus, totam officia iusto neque aperiam exercitationem alias maxime. Assumenda?</p>" frameborder="1">
         <p>Infelizmente seu navegador n é compatível</p>
     </iframe>
 
